# EV_SHOWROOM_ELECTRIFIED

./: .babelrc  package-lock.json  package.json  tsconfig.json
public/: index.html  login.html
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: hive.rs  key.rs  main.rs  sec.rs  value.rs
src-tauri/src/iter/: keys.rs  mod.rs  values.rs
src/assets/images/: index.ts
src/assets/lotties/: index.ts  lottie_ev_logo.json  lottie_spinner.json  lottie_splash.json
src/classes/: index.ts
src/components/: index.ts
src/components/1000-Item/: index.tsx  style.css
src/components/Popup-360/: index.tsx  style.css
src/components/Popup-Calculator/: index.tsx  style.css
src/components/Popup-Video/: index.tsx  style.css
src/components/Template_1/: index.tsx  style.css
src/components/Template_2/: index.tsx  style.css
src/components/Template_3/: index.tsx  style.css
src/constants/: index.ts
src/data/: data.json
src/function/: index.ts
src/interfaces/: index.ts
src/navigations/: index.tsx
src/navigations/1000-Main.nav/: index.tsx  style.css
src/navigations/1200-Vehicle.nav/: index.tsx  style.css
src/screens/: index.ts
src/screens/0000-Splash/: index.tsx  style.css
src/stores/: assets.store.ts  download_status.store.ts  electrified.store.ts  electrified_menu.store.ts  electrified_page.store.ts  electrified_select.store.ts  gesture.store.ts  index.ts  language.store.ts  load.store.ts  login.store.ts  popup.store.ts  setting.store.ts  template3.store.ts  update_status.store.ts  video.store.ts
(+10 files in other folders)
