[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "x86_64-pc-windows-msvc",
    "i686-pc-windows-msvc",
    "x86_64-pc-windows-gnu",
    "i686-pc-windows-gnu",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
bitflags = "1.2.1"
log = "0.4.11"
thiserror = "1.0.20"
utfx = "0.1"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.4", features = ["api-all", "devtools", "system-tray"] }

# [target.'cfg(windows)'.dependencies]
# winapi = {  version = "0.3.9", features = ["winerror", "winreg", "processthreadsapi", "winnt", "winbase", "securitybaseapi", "ntdef"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
